Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118813

Window modal dialogs can go behind their parent dialogs with XdgShell

    XMLWordPrintable

Details

    • f6c4b2f06 (dev)

    Description

      To reproduce:

      • run one of the examples like pure-qml or minimal-qml
      • run attached application
      • click on the button
      • click the message box window to bring it to focus
      • click somewhere on the main window

      The window modal message box goes behind the main window.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tvete Paul Olav Tvete
              poikelin Joni Poikelin
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes