ShellSurfaceItem: Make sure modal dialogs stay on top

Use the new modal property from ShellSurface, and treat modal dialogs
as StaysOnTop.

[ChangeLog][QtWaylandCompositor] ShellSurfaceItem will keep modal
dialogs on top of other surfaces when using XdgShell.

Fixes: QTBUG-118813
Change-Id: Iaa0ca411dc4fec740e0fbe1db523b16b028c4c29
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>